ecmascript/parser/tests/test262-error-references/fail/581bedbbce2541be.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/581bedbbce2541be.js:1:6
  |
1 | for (i + 1 in {});
  |      ^^^^^

